# extend_k8s_example

./: .gitignore  BUILD.bazel  Dockerfile  README.md
cmd/apiserver/: main.go
cmd/controller-manager/: main.go
docs/examples/nginx/: nginx.yaml
docs/examples/nginxapp/: nginxapp.yaml
pkg/apis/: doc.go  zz_generated.api.register.go
pkg/apis/simple/: doc.go  zz_generated.api.register.go  zz_generated.deepcopy.go
pkg/apis/simple/install/: zz_generated.api.register.go
pkg/apis/simple/v1alpha1/: doc.go  nginxapp_types.go  nginxapp_types_test.go  v1alpha1_suite_test.go  zz_generated.api.register.go  zz_generated.conversion.go  zz_generated.deepcopy.go
pkg/client/clientset_generated/clientset/: clientset.go
pkg/client/clientset_generated/clientset/fake/: clientset_generated.go  register.go
pkg/client/clientset_generated/clientset/scheme/: register.go
pkg/client/clientset_generated/internalclientset/: clientset.go
pkg/client/clientset_generated/internalclientset/fake/: clientset_generated.go  register.go
pkg/client/clientset_generated/internalclientset/scheme/: register.go
pkg/client/informers_generated/externalversions/: factory.go  generic.go
pkg/client/informers_generated/internalversion/: factory.go  generic.go
pkg/controller/: zz_generated.api.register.go
pkg/controller/nginxapp/: controller.go  controller_test.go  nginxapp_suite_test.go  zz_generated.api.register.go
pkg/controller/sharedinformers/: zz_generated.api.register.go
pkg/openapi/: openapi_generated.go
sample/: nginxapp.yaml
(+22 files in other folders)
